--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ DISCORD_CHANNEL_ID=your_discord_channel_id_here
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
+# News API Configuration (Optional - for real news sentiment)
+NEWS_API_KEY=your_newsapi_key_here  # Get free key from https://newsapi.org
+NEWS_API_ENABLED=false  # Set to true when you have a key
+
 # Trading Configuration
 TRADING_MODE=paper  # paper or live
 MAX_POSITION_SIZE=5000  # Maximum position size in USD
