--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ DISCORD_CHANNEL_ID=your_discord_channel_id_here
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Claude API Configuration (for sentiment analysis)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
 # News API Configuration (Optional - for real news sentiment)
 NEWS_API_KEY=your_newsapi_key_here  # Get free key from https://newsapi.org
 NEWS_API_ENABLED=false  # Set to true when you have a key
