--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ ALPACA_API_KEY=your_alpaca_api_key_here
 ALPACA_SECRET_KEY=your_alpaca_secret_key_here
 ALPACA_BASE_URL=https://paper-api.alpaca.markets  # Use https://api.alpaca.markets for live trading
 
+# Alpaca Market Data Configuration
+# IEX = Free real-time data (15-minute delayed volume, may have gaps)
+# SIP = Premium real-time data (full volume, all exchanges) - requires paid subscription
+ALPACA_DATA_FEED=iex  # Options: 'iex' (free) or 'sip' (paid)
+
 # Discord Bot Configuration
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
 DISCORD_CHANNEL_ID=your_discord_channel_id_here
